# h-cli

./: .clinerules  .env.example  .gitignore  .windsurfrules  Makefile  README.md  pyproject.toml
app/: __init__.py
app/adapters/ai/: __init__.py  base.py  commands.py  gemini.py  openai.py
app/adapters/base/: merge_files.py
app/adapters/git/: __init__.py  commands.py  exceptions.py  git_clone.py  git_commands.py  git_commit_msg_prompt.py  git_tree.py
app/adapters/git/functions/: __init__.py  git_commit_msg_prompt.py  git_tree.py
app/core/: config.py
app/core/use_cases/: commands.py
app/frameworks/: cli.py  logger.py
app/tools/: file_utils.py  vscode_utils.py
config/: default.yaml
h/: __init__.py  cli.py  config.py
h/core/: commands.py
h/plugins/: __init__.py  base.py  git.py  git_commit_template.txt
h/plugins/ai/: commands.py
h/plugins/base/: merge_files.py
h/plugins/git/: __init__.py  commands.py  functions.py  git_commands.py  git_commit_msg_prompt.py  git_commit_template.txt  git_plugin_functions.py  git_tree.py  plugin.py
h/plugins/git/functions/: __init__.py  git_clone.py  git_commit_msg_prompt.py  git_tree.py
h/utils/: file_utils.py  logger.py  vscode_utils.py
h/utils/ai/: __init__.py  base.py  example.py  gemini.py  openai.py
tests/: test_cli.py  test_merge_files.py  test_pretty_logger.py
